hphp/test/zend/good/ext/filter/tests/052.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("filter")) die("skip");
}
