hphp/test/zend/bad/ext/filter/tests/bug49184.php.skipif
<?php if (!extension_loaded("filter")) die("skip needs filter ext"); ?>